--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Escort Services - Limpopo</title>
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <!-- Age Verification Banner -->
     <div id="ageBanner">
 
-        <img src="../public/Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo-removebg-preview.png" alt="Company Logo" class="logo">
+        <img src="public/Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo-removebg-preview.png" alt="Company Logo" class="logo">
     
         <div class="banner-content">
             <h1 class="kalam-regular">Warning: Adult Content</h1>
@@ -59,10 +59,10 @@
         <div class="main-container">
             <div class="sidebar">
                 <ul>
-                    <li><a href="escort_listing.html" class="sidebar-item">List Now</a></li>
-                    <li><a href="forum.html" class="sidebar-item">Forum</a></li>
-                    <li><a href="search.html" class="sidebar-item">Search</a></li>
-                    <li><a href="about_us.html" class="sidebar-item">Contact Us</a></li>
+                    <li><a href="views/escort_listing.html" class="sidebar-item">List Now</a></li>
+                    <li><a href="views/forum.html" class="sidebar-item">Forum</a></li>
+                    <li><a href="views/search.html" class="sidebar-item">Search</a></li>
+                    <li><a href="views/about_us.html" class="sidebar-item">Contact Us</a></li>
                 </ul>
                 <!-- Ad Space -->
                 <div class="ad-space">Ad Space</div>
@@ -70,34 +70,34 @@
 
             <div class="content">
                 <div class="town-buttons">
-                    <a href="phalaborwa_escorts.html"><button class="glitter-button">Phalaborwa</button></a>
-                    <a href="thohoyandou_escorts.html"><button class="glitter-button">Thohoyandou</button></a>
-                    <a href="tzaneen_escorts.html"><button class="glitter-button">Tzaneen</button></a>
-                    <a href="polokwane_escorts.html"><button class="glitter-button">Polokwane</button></a>
+                    <a href="views/phalaborwa_escorts.html"><button class="glitter-button">Phalaborwa</button></a>
+                    <a href="views/thohoyandou_escorts.html"><button class="glitter-button">Thohoyandou</button></a>
+                    <a href="views/tzaneen_escorts.html"><button class="glitter-button">Tzaneen</button></a>
+                    <a href="views/polokwane_escorts.html"><button class="glitter-button">Polokwane</button></a>
                 </div>
                 
                 <h2 class="kalam-regular">Recently Added</h2>
                 <div class="tiles">
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 1"></div>
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 2"></div>
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 3"></div>
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 4"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 1"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 2"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 3"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 4"></div>
                 </div>
 
                 <h2 class="kalam-regular">Top 10</h2>
                 <div class="tiles">
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 5"></div>
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 6"></div>
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 7"></div>
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 8"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 5"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 6"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 7"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 8"></div>
                 </div>
 
                 <!-- <h2 class="kalam-regular">Active Now</h2>
                 <div class="tiles">
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 9"></div>
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 10"></div>
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 11"></div>
-                    <div class="tile"><img src="../public/OIP.jpg" alt="Escort 12"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 9"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 10"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 11"></div>
+                    <div class="tile"><img src="public/OIP.jpg" alt="Escort 12"></div>
                 </div> -->
             </div>
         </div>
