--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
     <footer>
         <p>&copy; 2024 Mzansi Vixens. All rights reserved.</p>
         <p>
-            <a href="terms_and_conditions.html">Terms and Conditions</a> | 
-            <a href="disclaimer.html">Disclaimer</a>
+            <a href="views/terms_and_conditions.html">Terms and Conditions</a> | 
+            <a href="views/disclaimer.html">Disclaimer</a>
         </p>
     </footer>
 
